
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>mofokom</groupId>
        <artifactId>mail</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <description>
The MAIL resource adaptor is a quality pre-tested, scalable and vendor approved off-the-shelf component you can plug into the JAIN SLEE container with-in your network to rapidly enable your application services with features of e-mail delivery and reception.
High throughput low latency access to mail transports (S.M.T.P./MM3) and stores (P.O.P/I.M.A.P), and notifications of session events.  Provides multi-session configurations for multi-service environments.

Versatile configuration of the resource adaptor provides compatibility to many mail stores and transports, using the standard Java Enterprise Edition javax.mail extension API, existing mail code can easily be migrated to the SLEE environment.

Delivered with sample Sbb code and example configurations for testing against common mail providers, this RA can provide an essential functionality optimised for massively con-current email sending and delivery to your value added services.
    </description>
    <artifactId>mail-ra</artifactId>
    <packaging>jar</packaging>
    <name>Mail SLEE RA</name>
    <url>http://www.mofokom.biz/site/${pom.artifactId}</url>
    <properties>
        <serial.number>4e44f238</serial.number>
    </properties>
    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>${basedir}/target/dependency</directory>
                <includes>
                    <include>*.jar</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <chmod>true</chmod>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <overview>src/main/java/overview-summary.html</overview>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <excludeTransitive>true</excludeTransitive>
                    <includeScope>provided</includeScope>
                    <excludeScope>compile</excludeScope>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>ra-type</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>ra-type</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>mofokom/resource/mail/*.class</include>
                                <include>META-INF/resource-adaptor-type-jar.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>ra</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>ra</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>mofokom/resource/mail/impl/*.class</include>
                                <include>META-INF/resource-adaptor-jar.xml</include>
                                <include>*.properties</include>
                            </includes>
                            <archive>
                                <manifestSections>
                                    <manifestSection>
                                        <name>mofokom/deadlock/</name>
                                        <manifestEntries>
                                            <Sealed>true</Sealed>
                                        </manifestEntries>
                                    </manifestSection>
                                    <manifestSection>
                                        <name>mofokom/resource/mail/impl/</name>
                                        <manifestEntries>
                                            <Sealed>true</Sealed>
                                        </manifestEntries>
                                    </manifestSection>
                                </manifestSections>
                            </archive>
                        </configuration>
                    </execution>
                    <execution>
                        <id>event</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>event</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>mofokom/event/mail/*.class</include>
                                <include>META-INF/event-jar.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>library</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>library</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>**/TransportError.class</include>
                                <include>**/activation*.jar</include>
                                <include>**/mail*.jar</include>
                                <include>META-INF/library-jar.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <attach>false</attach>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <!--<classpathPrefix>dependency</classpathPrefix>
                            <addClasspath>true</addClasspath>-->
                        </manifest>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.pyx4me</groupId>
                <artifactId>proguard-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>proguard</goal>
                        </goals>
                        <configuration>
                            <injar>${project.artifactId}-${project.version}-ra.jar</injar>
                            <outjar>${project.artifactId}-${project.version}-ra.jar</outjar>
                            <assembly>
                                <inclusions>
                                    <inclusion>
                                        <groupId>mofokom</groupId>
                                        <artifactId>deadlock</artifactId>
                                        <filter>!META-INF/*</filter>
                                    </inclusion>
                                     <inclusion>
                                        <groupId>mofokom</groupId>
                                        <artifactId>ra-common</artifactId>
                                    </inclusion>
                                </inclusions>
                            </assembly>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <options>
                        <option>-dontpreverify</option>
                        <option>-dontshrink</option>
                        <!--
                        <option>-dontobfuscate</option>
                        -->
                        <option>-target 1.6</option>
                        <option>-renamesourcefileattribute MAIL-${maven.build.timestamp}-${serial.number}.java</option>
                        <option>-flattenpackagehierarchy mofokom.resource.mail.impl</option>
                        <option>-repackageclasses mofokom.resource.mail.impl</option>
                        <option>-overloadaggressively</option>
                        <option>-keepattributes LineNumbers,InnerClasses,SourceFile,ExceptionsLineNumberTable,Deprecated,Signature,*Annotation*,EnclosingMethod</option>
                        <option>-printmapping ${basedir}/src/main/proguard/out.pro</option>
                        <option>-keep public class mofokom.resource.mail.impl.MailResourceAdaptor {*;}</option>
                        <option>-adaptresourcefilecontents **.properties,META-INF/MANIFEST.MF</option>
                    </options>
                    <libs>
                        <lib>${java.home}/lib/rt.jar</lib>
                        <lib>target/${project.artifactId}-${project.version}-ra-type.jar</lib>
                        <lib>target/${project.artifactId}-${project.version}-event.jar</lib>
                        <lib>target/${project.artifactId}-${project.version}-library.jar</lib>
                    </libs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <executions>
                    <execution>
                        <id>sign</id>
                        <phase>package</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!--
                    <skip>true</skip>
                    -->
                    <archiveDirectory>target/</archiveDirectory>
                    <includes>
                        <include>**/*-ra.jar</include>
                    </includes>
                    <processAttachedArtifacts>false</processAttachedArtifacts>
                    <processMainArtifact>false</processMainArtifact>
                    <removeExistingSignatures>true</removeExistingSignatures>
                    <keystore>/virt/main.jks</keystore>
                    <!-- -Djarsigner.alias="Alias Name" -->
                    <alias>slee</alias>
                    <storepass>kraj2003</storepass>
                    <!--
                    <verify>true</verify>
                    <verbose>true</verbose>
                    -->
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2-beta-5</version>
                <executions>
                    <execution>
                        <id>dist-assemble</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <attach>true</attach>
                    <runOnlyAtExecutionRoot>false</runOnlyAtExecutionRoot>
                    <descriptors>
                        <descriptor>src/main/assemble/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>-Djava.net.preferIPv4Stack=true -Djava.security.manager -Djava.security.policy=file:///${project.basedir}/src/main/resources/.java.policy</argLine>
                    <systemProperties>
                    </systemProperties>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>javax.slee</groupId>
            <artifactId>jainslee-api</artifactId>
            <version>1.1</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <artifactId>activation</artifactId>
            <groupId>javax.activation</groupId>
            <type>jar</type>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.3</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mofokom</groupId>
            <artifactId>slee-test-framework</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>deadlock</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>ra-common</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>







